--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
                         <a class="nav-link" href="add.html">Добавить товар</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="records.html">Отчеты</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="contact.html">Контакты</a>
                     </li>
                 </ul>
