--- a/profile.html
+++ b/profile.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="add.html">Добавить товар</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="records.html">Отчеты</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Контакты</a>
                     </li>
                 </ul>
