--- a/register.html
+++ b/register.html
@@ -43,6 +43,26 @@
                                     </div>
                                 </div>
                                 <div class="mb-3">
+                                    <label for="firstName" class="form-label">Имя</label>
+                                    <input type="text" 
+                                           class="form-control" 
+                                           id="firstName" 
+                                           required>
+                                    <div class="invalid-feedback">
+                                        Пожалуйста, введите ваше имя
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="lastName" class="form-label">Фамилия</label>
+                                    <input type="text" 
+                                           class="form-control" 
+                                           id="lastName" 
+                                           required>
+                                    <div class="invalid-feedback">
+                                        Пожалуйста, введите вашу фамилию
+                                    </div>
+                                </div>
+                                <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
                                     <input type="email" 
                                            class="form-control" 
@@ -75,23 +95,23 @@
                                     </div>
                                 </div>
 
-                                <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" id="joinExisting">
-                                    <label class="form-check-label" for="joinExisting">
-                                        Присоединиться к существующему предприятию
-                                    </label>
-                                </div>
-                                
-                                <div id="existingEnterpriseFields" class="mb-3" style="display: none;">
-                                    <label for="enterpriseId" class="form-label">ID предприятия</label>
-                                    <input type="number" 
-                                           class="form-control" 
-                                           id="enterpriseId"
-                                           min="1">
-                                    <div class="invalid-feedback">
-                                        Введите корректный ID предприятия
+                                <fieldset class="mb-3">
+                                    <legend class="col-form-label col-sm-12 pt-0">Тип регистрации</legend>
+                                    <div class="col-sm-12">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="registrationType" id="regTypeNewEnterprise" value="new" checked>
+                                            <label class="form-check-label" for="regTypeNewEnterprise">
+                                                Создать новое предприятие
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="registrationType" id="regTypeJoinByToken" value="token">
+                                            <label class="form-check-label" for="regTypeJoinByToken">
+                                                Присоединиться к предприятию по приглашению
+                                            </label>
+                                        </div>
                                     </div>
-                                </div>
+                                </fieldset>
                                 
                                 <div id="newEnterpriseFields" class="mb-3">
                                     <label for="enterpriseName" class="form-label">Название предприятия</label>
@@ -100,6 +120,28 @@
                                            id="enterpriseName">
                                     <div class="invalid-feedback">
                                         Введите название предприятия
+                                    </div>
+                                </div>
+
+                                <div id="joinByTokenFields" class="mb-3" style="display: none;">
+                                    <div class="mb-3">
+                                        <label for="enterpriseIdToken" class="form-label">ID предприятия</label>
+                                        <input type="number" 
+                                               class="form-control" 
+                                               id="enterpriseIdToken"
+                                               min="1">
+                                        <div class="invalid-feedback">
+                                            Введите корректный ID предприятия
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="invitationToken" class="form-label">Пригласительный токен</label>
+                                        <input type="text" 
+                                               class="form-control" 
+                                               id="invitationToken">
+                                        <div class="invalid-feedback">
+                                            Введите пригласительный токен
+                                        </div>
                                     </div>
                                 </div>
 
